# hi

./: Modelfile  README.md  arbitrage_data.db  daemon.py  launch_panopticon.sh  main.py  orchestrator.py  pyproject.toml  requirements.txt  setup.sh  setup_env.sh
config/: targets.json
src/: alert_engine.py  analytics.py  app.py  database.py  flip_scraper.py  intelligence.py  logistics.py  manifest.py  negotiator.py
src/physical_commodity_arbitrage_engine/: .env  arbitrage_calculator.py  dashboard.py  outreach_generator.py  pyproject.toml  scraper.py  setup.sh
tests/: test_daemon.py  test_extraction_gate.py
