[project]
name = "slc-arbitrage"
version = "4.0.0"
dependencies = [
    "playwright>=1.43.0",
    "playwright-stealth>=1.0.6",
    "beautifulsoup4>=4.12.3",
    "streamlit>=1.33.0",
    "plotly>=5.20.0",
    "folium>=0.16.0",
    "streamlit-folium>=0.19.0",
    "qrcode>=7.4.2",
    "apprise>=1.7.6",
    "psutil>=5.9.8",
    "pandas>=2.2.2",
    "tabulate>=0.9.0",
    "requests>=2.31.0",
    "numpy>=1.26.4",
    "scikit-learn>=1.4.2",
    "ollama>=0.2.0"
]
